v2016-04-19
  * Modify post "使用SSH反向隧道进行内网穿透"
  * Add push.sh
  * Update themes

v2016-04-18
  * Modify post "使用GPG签名Git提交和标签"
  * Update themes

v2016-04-17
  * New post "使用GPG签名Git提交和标签"

v2016-04-14
  * Modify thread key for duoshuo

v2016-04-13.2
  * Modify build scripts

v2016-04-13
  * Better build scripts
  * Update themes

v2016-04-02.4
  * Modify page 404

v2016-04-02.3
  * Modify page 404

v2016-04-02.2
  * Modify page 404

v2016-04-02
  * Modify "友情链接"

v2016-03-25
  * Modify post "计算IP、ICMP、TCP和UDP包的校验和"

v2016-03-22
  * New post "计算IP、ICMP、TCP和UDP包的校验和"

v2016-03-13
  * Update themes

v2016-03-05
  * Modify post "新年快乐"

v2016-03-04
  * Use color scheme yilia
  * Modify post "使用SSH反向隧道进行内网穿透"
  * Call themes/init.sh at build.sh

v2016-03-01
  * For a coming new summer
  * For sections of my life
  * Modify "友情链接"
  * Update node modules

v2016-02-22
  * Modify post "软件和世界，愚者的中二之语"
  * Modify "友情链接"

v2016-02-20
  * Use theme built-in Baidu Tongji
  * Add copyright for all posts
  * Update some node modules

v2016-02-19.2
  * Modify init.sh

v2016-02-19
  * Add recent visitors on about page

v2016-02-18.2
  * Modify "About"

v2016-02-18
  * Add categories for posts
  * Upgrade theme

v2016-02-17.2
  * Modify post "使用SSH反向隧道进行内网穿透"

v2016-02-17
  * New page "About"
  * New post "使用SSH反向隧道进行内网穿透"

v2016-02-12
  * Modify "友情链接"

v2016-02-07
  * New post "新年快乐"

v2016-02-05.2
  * Add Xiami in subnav

v2016-02-05
  * Set timezone to CST-8

v2016-02-04.4
  * Display Linux as GNU/Linux

v2016-02-04.3
  * Fix wrong path in themes/init.sh

v2016-02-04.2
  * Fix UA display unnormal on Linux

v2016-02-04
  * Show information from UA

v2016-02-03
  * Switch theme to hexo-theme-yelee

v2016-01-29.1
  * Remove useless line in init.sh

v2016-01-29
  * Enable Baidu Tongji

v2016-01-19.3
  * Rename server.sh

v2016-01-19
  * Modify build scripts
  * Modify page 404

v2016-01-16
  * Add sitemap for baidu

v2016-01-11
  * New page 404
  * Enable Google Analytics
