@@ -6,7 +6,7 @@
 title: 河 的 第 三 条 岸
 subtitle: A Blog About Me
 description: A Blog About Me
-author: Arondight
+author: 愛と奇跡の物語
 language: zh-Hans
 timezone: Asia/Shanghai
 
