@@ -26,15 +26,16 @@ date: 2016-02-17 15:09:40
 > -- sign on the back wall of a small printing company
 
 + 男生一枚，但不是可爱的男孩子。
-+ 于15 年7 月从一个名不见经传的学院毕业，1 个月后过上了码农的日常生活。
++ 于2015 年7 月从一个名不见经传的学院毕业，1 个月后过上了码农的日常生活。
 + 目前在北京，对这个城市不喜欢也不讨厌。
 + 靠Linux 吃饭，码字常用Vim。
 + 真爱是Perl，能够原谅这门语言的很多缺陷。
 + 崇尚C++，但功力不够。
-+ Python 一生黑。
++ 不喜欢Java 和Python。
 + 尽管一直用Vim，但目前没有最爱的编辑器。
 + 在用了5 年Slackware 之后，最近2 年成了Arch 神教的忠实教徒。
-+ 对空格位置有近乎变态的强迫，在以下情况下一定会后跟空格：
++ Linux 黑粉。
++ 对空格有强烈的强迫，在以下情况下一定会后跟空格：
   * 中英文混排，每个英文单词之后
   * 非句末的半角符号之后
   * 数字之后
@@ -42,29 +43,29 @@ date: 2016-02-17 15:09:40
   * 以上情况不适用于文件名
 + 当下没有女朋友，**求妹纸带走**。
 + 非常喜欢的一本轻小说是支仓冻砂老师的《狼与香辛料》。
-+ 很向往大崎娜娜，喜欢阿尔托利亚·潘德拉贡。
++ 向往大崎娜娜，喜欢阿尔托利亚·潘德拉贡。
 + 不喜欢卖肉/卖胸向动漫，但是喜欢卖妹妹的作品。
-+ 无条件喜欢型月社的作品和物语系列作品。
++ 无条件喜欢型月社的作品。
 + 对京阿尼的作品抱有高度的好感。
-+ 很难接受漫画这种艺术形式。
-+ 最喜欢的作家是村上春树，其作品最为喜欢的是《奇鸟行状录》。
-+ 喜欢的歌手是平野绫，但对其本人知之甚少。
++ 不是很能接受漫画这种艺术形式。
++ 喜欢的作家是村上春树，其作品最为喜欢的是《奇鸟行状录》。
++ 喜欢梶浦由记的音乐，但对其本人知之甚少。
 + 所知甚少，不敢多言。
-+ 常用的面部表情：
++ 日常面部表情：
   * 平常地工作：(￣﹏￣)
   * 开心地工作：(￣▽￣")
-  * 晚上独自一人：(。・ω・)
+  * 下班回窝后：( ˊ\_>ˋ)
   * 地铁上：( ＿ ＿)ノ｜
   * 被晒妹：(\*・・\*)
   * 其他不开心的表情就不放了，因为真的不好看
 
 另外，你可以在此留言。
 
-2016 年春
+2016 年夏初
 
-@[Arondight](http://arondight.github.io)
+[@愛と奇跡の物語](http://arondight.github.io)
 
 ---
 
-<ul class="ds-recent-visitors" data-num-items="30" data-avatar-size="56"></ul>
+<ul class="ds-recent-visitors" data-num-items="64" data-avatar-size="56"></ul>
 
